@@ -1,3 +1,9 @@
+2019-10-30  Bernd Edlinger  <bernd.edlinger@hotmail.de>
+
+	PR c++/92024
+	* g++.dg/parse/crash70.C: New test.
+	* c-c++-common/Wshadow-1.c: New test.
+
 2019-10-30  Tobias Burnus  <tobias@codesourcery.com>
 
 	PR fortran/92208
